-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 15
-
Component/s: core-libs
-
b09
-
x86, arm
-
linux
Two issues:
The MAX_ALIGN constant in Utils.java should be 8 on 32-bit systems not 16.
Unsafe::allocateMemory, which is called by Utils::makeNativeSegment, should fail if the aligned-up size overflows a size_t. This happens if passing size (long)Integer.MAX_VALUE * 2 on a 32-bit system.
Once these are fixed we can remove the test workarounds inJDK-8236634.
The MAX_ALIGN constant in Utils.java should be 8 on 32-bit systems not 16.
Unsafe::allocateMemory, which is called by Utils::makeNativeSegment, should fail if the aligned-up size overflows a size_t. This happens if passing size (long)Integer.MAX_VALUE * 2 on a 32-bit system.
Once these are fixed we can remove the test workarounds in
- relates to
-
JDK-8236634 Memory Access API tests fail on 32-bit
-
- Resolved
-
-
JDK-8253590 java/foreign tests are still failing on x86_32 after foreign-memaccess integration
-
- Resolved
-
- links to
-
Commit
openjdk/panama-foreign/987ba9f3