8237521: Memory Access API fixes for 32-bit

Reviewed-by: mcimadamore, dholmes